--- a/trunk/Report/Report.tex
+++ b/trunk/Report/Report.tex
@@ -12,10 +12,10 @@
 
 \title{Parallel Galaxy Simulations}
 
-\author{Cody Garges \\ texttt{gargec@rpi.edu} \\ \\
+\author{Cody Garges \\ \texttt{gargec@rpi.edu} \\ \\
 	James McAtamney \\ \texttt{mcataj@cs.rpi.edu} \\ \\
 	Amanda Olyha \\ \texttt{olyhaa@rpi.edu} }  
-\date{May 12, 2011}	
+\date{May 14, 2011}	
  
 \maketitle
 
