--- a/Report/generation.tex
+++ b/Report/generation.tex
@@ -8,8 +8,8 @@
 \usepackage{wrapfig}
 \begin{document}
 
-\section{Initial Condition Generation}
-We first had to generate the initial positions of the stars a galaxy. Galaxies have several properties we must take into account:
+\section{Initial Conditions}
+We first had to generate the initial positions of the stars a galaxy. Galaxies have several properties we had to take into account:
 \begin{enumerate}
   \item Shape of the spiral arms and central bulge. 
   \item The density of the stars
